--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,9 @@
         "src": "/(.*)",
         "dest": "app.py"
       }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": "."
+    }
   }
   
