--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,8 @@
       }
     ],
     "env": {
-        "PYTHONPATH": "."
+        "PYTHONPATH": ".",
+        "FLASK_ENV": "production"
     }
   }
   
